# flask-discord-oauth2-template

./: .env.local  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
templates/: dashboard.html  guild.html  guild_info.html  home.html
